[gd_scene load_steps=17 format=4 uid="uid://ddus41d5bg51a"]

[ext_resource type="Script" uid="uid://ckpprmjggpoym" path="res://scripts/world_1_0.gd" id="1_ooac0"]
[ext_resource type="Texture2D" uid="uid://baqom0v8hiyuy" path="res://assets/Tilesets/Sand_tileset.png" id="2_2f66s"]
[ext_resource type="Texture2D" uid="uid://bbdlwtnyjf6fv" path="res://assets/Tilesets/Stone_tileset.png" id="3_45qvm"]
[ext_resource type="PackedScene" uid="uid://ld0yv8bej7j1" path="res://scenes/piston_hazard.tscn" id="4_y5tkv"]
[ext_resource type="PackedScene" uid="uid://dknvtslac01a5" path="res://scenes/portal.tscn" id="5_fjryq"]

[sub_resource type="TileMapPattern" id="TileMapPattern_6mqhf"]
tile_data = PackedInt32Array(0, 262145, 1, 65536, 196609, 2, 1, 65537, 4)

[sub_resource type="TileMapPattern" id="TileMapPattern_i4dot"]
tile_data = PackedInt32Array(0, 65537, 4, 1, 458753, 1, 65537, 196609, 2)

[sub_resource type="TileMapPattern" id="TileMapPattern_c81cj"]
tile_data = PackedInt32Array(0, 196609, 2, 65536, 262145, 4, 65537, 65537, 4)

[sub_resource type="TileMapPattern" id="TileMapPattern_bcyrs"]
tile_data = PackedInt32Array(65536, 65537, 4, 1, 196609, 2, 65537, 458753, 4)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_6mqhf"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_i4dot"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_c81cj"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l6mpm"]
texture = ExtResource("2_2f66s")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_6mqhf")
1:0/0 = 0
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
2:0/0 = 0
2:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
3:0/0 = 0
3:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
4:0/0 = 0
4:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
5:0/0 = 0
5:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
6:0/0 = 0
6:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
7:0/0 = 0
7:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
8:0/0 = 0
8:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
9:0/0 = 0
9:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
0:1/0 = 0
0:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_6mqhf")
1:1/0 = 0
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_6mqhf")
2:1/0 = 0
2:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
6:1/0 = 0
6:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
7:1/0 = 0
7:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
8:1/0 = 0
8:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
9:1/0 = 0
9:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
0:2/0 = 0
0:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
1:2/0 = 0
1:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
2:2/0 = 0
2:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
4:2/0 = 0
4:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
5:2/0 = 0
5:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
6:2/0 = 0
6:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
7:2/0 = 0
7:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
8:2/0 = 0
8:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_6mqhf")
9:2/0 = 0
9:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
10:2/0 = 0
10:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
0:3/0 = 0
0:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
1:3/0 = 0
1:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
2:3/0 = 0
2:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
3:3/0 = 0
3:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
4:3/0 = 0
4:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
5:3/0 = 0
5:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
6:3/0 = 0
6:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
7:3/0 = 0
7:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
8:3/0 = 0
8:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
9:3/0 = 0
9:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
10:3/0 = 0
10:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
3:4/0 = 0
3:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
4:4/0 = 0
4:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
5:4/0 = 0
5:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
6:4/0 = 0
6:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
7:4/0 = 0
7:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
8:4/0 = 0
8:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
3:1/0 = 0
3:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
3:2/0 = 0
3:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
4:1/0 = 0
4:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
5:1/0 = 0
5:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_bcyrs"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sigqj"]
texture = ExtResource("3_45qvm")
texture_region_size = Vector2i(32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")

[sub_resource type="TileSet" id="TileSet_ol31w"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
navigation_layer_0/layers = 1
navigation_layer_1/layers = 1
sources/0 = SubResource("TileSetAtlasSource_l6mpm")
sources/1 = SubResource("TileSetAtlasSource_sigqj")
pattern_0 = SubResource("TileMapPattern_6mqhf")
pattern_1 = SubResource("TileMapPattern_i4dot")
pattern_2 = SubResource("TileMapPattern_c81cj")
pattern_3 = SubResource("TileMapPattern_bcyrs")

[node name="World 1-0" type="Node2D"]
script = ExtResource("1_ooac0")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
z_index = -1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD9//n/AAAAAAEAAAD+//n/AAABAAEAAAD///n/AAABAAEAAAAAAPn/AAABAAEAAAABAPn/AAABAAEAAAACAPn/AAACAAEAAAD9//L/AAAAAAEAAAD9//P/AAAAAAEAAAD9//T/AAAAAAEAAAD9//X/AAAAAAEAAAD9//b/AAAAAAEAAAD9//f/AAAAAAEAAAD9//j/AAAAAAEAAAD+//L/AAABAAEAAAD+//P/AAABAAEAAAD+//T/AAABAAEAAAD+//X/AAABAAEAAAD+//b/AAABAAEAAAD+//f/AAABAAEAAAD+//j/AAABAAEAAAD///L/AAABAAEAAAD///P/AAABAAEAAAD///T/AAABAAEAAAD///X/AAABAAEAAAD///b/AAABAAEAAAD///f/AAABAAEAAAD///j/AAABAAEAAAAAAPL/AAABAAEAAAAAAPP/AAABAAEAAAAAAPT/AAABAAEAAAAAAPX/AAABAAEAAAAAAPb/AAABAAEAAAAAAPf/AAABAAEAAAAAAPj/AAABAAEAAAABAPL/AAABAAEAAAABAPP/AAABAAEAAAABAPT/AAABAAEAAAABAPX/AAABAAEAAAABAPb/AAABAAEAAAABAPf/AAABAAEAAAABAPj/AAABAAEAAAACAPL/AAACAAEAAAACAPP/AAACAAEAAAACAPT/AAACAAEAAAACAPX/AAACAAEAAAACAPb/AAACAAEAAAACAPf/AAACAAEAAAACAPj/AAACAAEAAAD8//n/AQADAAIAAAD8//j/AQADAAIAAAD8//f/AQADAAIAAAD8//b/AQADAAIAAAD8//X/AQADAAIAAAD8//T/AQADAAIAAAD8//P/AQADAAIAAAD8//L/AQADAAIAAAADAPL/AQADAAIAAAADAPP/AQADAAIAAAADAPT/AQADAAIAAAADAPX/AQADAAIAAAADAPb/AQADAAIAAAADAPf/AQADAAIAAAADAPj/AQADAAIAAAADAPn/AQADAAIAAAD8//r/AQADAAIAAAD8//v/AQADAAIAAAD8//z/AQADAAIAAAD8//3/AQADAAIAAAD8//7/AQADAAIAAAD8////AQAEAAQAAAD9//r/AAAAAAEAAAD9//v/AAAAAAEAAAD9//z/AAAAAAEAAAD9//3/AAAAAAEAAAD9//7/AAAAAAIAAAD9////AQABAAQAAAD+//r/AAABAAEAAAD+//v/AAABAAEAAAD+//z/AAABAAEAAAD+//3/AAABAAEAAAD+//7/AAABAAIAAAD+////AQABAAQAAAD///r/AAABAAEAAAD///v/AAABAAEAAAD///z/AAABAAEAAAD///3/AAABAAEAAAD///7/AAABAAIAAAD/////AQABAAQAAAAAAPr/AAABAAEAAAAAAPv/AAABAAEAAAAAAPz/AAABAAEAAAAAAP3/AAABAAEAAAAAAP7/AAABAAIAAAAAAP//AQABAAQAAAABAPr/AAABAAEAAAABAPv/AAABAAEAAAABAPz/AAABAAEAAAABAP3/AAABAAEAAAABAP7/AAABAAIAAAABAP//AQABAAQAAAACAPr/AAACAAEAAAACAPv/AAACAAEAAAACAPz/AAACAAEAAAACAP3/AAACAAEAAAACAP7/AAACAAIAAAACAP//AQABAAQAAAADAPr/AQADAAIAAAADAPv/AQADAAIAAAADAPz/AQADAAIAAAADAP3/AQADAAIAAAADAP7/AQADAAIAAAADAP//AQAHAAQAAAD8//H/AQADAAIAAAD9//H/AAAAAAEAAAD+//H/AAABAAEAAAD///H/AAABAAEAAAAAAPH/AAABAAEAAAABAPH/AAABAAEAAAACAPH/AAACAAEAAAADAPH/AQADAAIAAAD8/+3/AQAEAAEAAAD8/+7/AQADAAIAAAD8/+//AQADAAIAAAD8//D/AQADAAIAAAD9/+3/AQABAAQAAAD9/+7/AAAAAAAAAAD9/+//AAAAAAEAAAD9//D/AAAAAAEAAAD+/+3/AQABAAQAAAD+/+7/AAABAAAAAAD+/+//AAABAAEAAAD+//D/AAABAAEAAAD//+3/AQABAAQAAAD//+7/AAABAAAAAAD//+//AAABAAEAAAD///D/AAABAAEAAAAAAO3/AQABAAQAAAAAAO7/AAABAAAAAAAAAO//AAABAAEAAAAAAPD/AAABAAEAAAABAO3/AQABAAQAAAABAO7/AAABAAAAAAABAO//AAABAAEAAAABAPD/AAABAAEAAAACAO3/AQABAAQAAAACAO7/AAACAAAAAAACAO//AAACAAEAAAACAPD/AAACAAEAAAADAO3/AQAHAAEAAAADAO7/AQADAAIAAAADAO//AQADAAIAAAADAPD/AQADAAIAAAA=")
tile_set = SubResource("TileSet_ol31w")

[node name="PistonHazard" parent="." instance=ExtResource("4_y5tkv")]
position = Vector2(0, -618)
scale = Vector2(9.13194, 9.13194)

[node name="Portal" parent="." instance=ExtResource("5_fjryq")]
position = Vector2(0, -1038)

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(0, -190)

[node name="Tutorial" type="Label" parent="."]
offset_left = 278.0
offset_top = -575.0
offset_right = 453.0
offset_bottom = -240.0
scale = Vector2(1.63225, 1.56646)
text = "Controls:

WASD for movement

1: normal
2: flatten
3: headless
0: dizzy

+/- : zoom in/zoom out

buttonmash while flat 
to recover"

[connection signal="body_entered" from="Portal" to="." method="_on_portal_body_entered"]
